2001-06-04  Peter Neelin  <neelin@bic.mni.mcgill.ca>

	* print_all_label_bounding_boxes: Fixed test for y_max that was
	testing against the xw coordinate, rather than yw.
	
	
2001-05-11  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* Update: Add files in ~david/Source/Batch_processing that did not
	have an associated RCS file.  Add subdirectories Conglomerate and
	Csh.  The files "test.obj" and "tt.obj" were converted to ascii
	format.  Other obvious junk was removed, mostly files full of
	curvature numbers, and the like.  This is tagged with
	David-2001-05-11.

	* Update: Updated all the current files from the checked-out
	versions in ~david/Source/Batch_processing.  This is tagged with
	David-RCS-update.

	* RCS: The first import into CVS is a straight copy of
	~david/Source/Batch_processing/RCS, plus this ChangeLog file.
	This collection of files is tagged David-RCS.

	* symlinks: The following symlinks were replaced by their target
	files: test.obj, tt.obj.

	* symlinks: The following symlinks were removed:
	00100_81920.obj.gz, 00101, MNE.mnc,
	phantom_1-0mm_normal_wht_20480.obj, 00100_20480.obj.gz.


	* Batch_processing: Copied all of ~david/Source/Batch_processing
	except "RCS/test_dynamic.c,v" and "sean", which were
	read-protected.  Both files are old, dating to February 1996.  For
	"test_dynamic.c", the checked-out file is newer, in any case.