@@ -1,3 +1,9 @@
+2001-09-06  Jason Lerch   <jason@bic.mni.mcgill.ca>
+
+	* surface_mask2: Changed the logic so that an explicity binary
+	volume is created which is used to mask the original volume. Also
+	forced the inclusion of the object boundaries in the mask.
+
 2001-06-04  Peter Neelin  <neelin@bic.mni.mcgill.ca>
 
 	* print_all_label_bounding_boxes: Fixed test for y_max that was
